// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionCard renders failed version 1`] = `
<FailedWrapper>
  <DetailCard
    failure={true}
    icon={false}
    person={Object {}}
    status="Failed to Process"
    transaction={
      Object {
        "id": "1",
        "status": "FAILED",
      }
    }
    transactionDetail={Object {}}
  />
</FailedWrapper>
`;

exports[`TransactionCard renders pending version 1`] = `
<PendingWrapper>
  <DetailCard
    icon={false}
    person={Object {}}
    status="Pending"
    transaction={
      Object {
        "id": "1",
        "status": "PENDING",
      }
    }
    transactionDetail={Object {}}
  />
</PendingWrapper>
`;

exports[`TransactionCard renders with props 1`] = `
<Wrapper
  transaction={
    Object {
      "id": "1",
      "status": "default",
    }
  }
>
  <DetailCard
    icon={true}
    person={Object {}}
    transaction={
      Object {
        "id": "1",
        "status": "default",
      }
    }
    transactionDetail={Object {}}
  />
</Wrapper>
`;

exports[`TransactionDetail renders with failure 1`] = `
<div
  className="grid"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
>
  <div
    className="grid__item one-half"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    <div
      className="relative"
    >
      <div
        className="background--fill soft visuallyhidden@palm float-left round push-half-top"
        style={
          Object {
            "backgroundImage": "url(\\"http://test.com/test.jpg\\")",
          }
        }
      />
      <div
        className="soft-double-left@palm-wide-and-up push-left@palm-wide-and-up"
      >
        <h5
          className="text-dark-secondary flush"
          style={
            Object {
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          account name
        </h5>
        <h6
          className="text-dark-tertiary soft-half-bottom flush"
        >
          jim
           
          bob
        </h6>
        <p
          className="flush italic small text-alert"
        >
          Dec 12, 2012
        </p>
      </div>
    </div>
  </div>
  <div
    className="grid__item one-half text-right"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    <div>
      <Currency
        amount="2.00"
        baseHeadingSize="4"
        className="
            text-dark-tertiary text-right
            soft-half-right@handheld soft-double-right@lap-and-up
          "
      />
      <span
        className="text-primary icon-arrow-next locked"
        style={
          Object {
            "right": "-13px",
            "top": "2px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TransactionDetail renders with failure and status 1`] = `
<div
  className="grid"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
>
  <div
    className="grid__item one-half"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    <div
      className="relative"
    >
      <div
        className="background--fill soft visuallyhidden@palm float-left round push-half-top"
        style={
          Object {
            "backgroundImage": "url(\\"http://test.com/test.jpg\\")",
          }
        }
      />
      <div
        className="soft-double-left@palm-wide-and-up push-left@palm-wide-and-up"
      >
        <h5
          className="text-dark-secondary flush"
          style={
            Object {
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          account name
        </h5>
        <h6
          className="text-dark-tertiary soft-half-bottom flush"
        >
          jim
           
          bob
        </h6>
        <p
          className="flush italic small text-alert"
        >
          error - 
          Dec 12, 2012
        </p>
      </div>
    </div>
  </div>
  <div
    className="grid__item one-half text-right"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    <div>
      <Currency
        amount="2.00"
        baseHeadingSize="4"
        className="
            text-dark-tertiary text-right
            soft-half-right@handheld soft-double-right@lap-and-up
          "
      />
      <span
        className="text-primary icon-arrow-next locked"
        style={
          Object {
            "right": "-13px",
            "top": "2px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TransactionDetail renders with props 1`] = `
<div
  className="grid"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
>
  <div
    className="grid__item one-half"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    <div
      className="relative"
    >
      <div
        className="background--fill soft visuallyhidden@palm float-left round push-half-top"
        style={
          Object {
            "backgroundImage": "url(\\"http://test.com/test.jpg\\")",
          }
        }
      />
      <div
        className="soft-double-left@palm-wide-and-up push-left@palm-wide-and-up"
      >
        <h5
          className="text-dark-secondary flush"
          style={
            Object {
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          account name
        </h5>
        <h6
          className="text-dark-tertiary soft-half-bottom flush"
        >
          jim
           
          bob
        </h6>
        <p
          className="flush italic small text-dark-tertiary"
        >
          Dec 12, 2012
        </p>
      </div>
    </div>
  </div>
  <div
    className="grid__item one-half text-right"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    <div>
      <Currency
        amount="2.00"
        baseHeadingSize="4"
        className="
            text-dark-tertiary text-right
            soft-half-right@handheld soft-double-right@lap-and-up
          "
      />
      <span
        className="text-primary icon-arrow-next locked"
        style={
          Object {
            "right": "-13px",
            "top": "2px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TransactionDetail renders without icon 1`] = `
<div
  className="grid"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
>
  <div
    className="grid__item one-half"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    <div
      className="relative"
    >
      <div
        className="background--fill soft visuallyhidden@palm float-left round push-half-top"
        style={
          Object {
            "backgroundImage": "url(\\"http://test.com/test.jpg\\")",
          }
        }
      />
      <div
        className="soft-double-left@palm-wide-and-up push-left@palm-wide-and-up"
      >
        <h5
          className="text-dark-secondary flush"
          style={
            Object {
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          account name
        </h5>
        <h6
          className="text-dark-tertiary soft-half-bottom flush"
        >
          jim
           
          bob
        </h6>
        <p
          className="flush italic small text-dark-tertiary"
        >
          Dec 12, 2012
        </p>
      </div>
    </div>
  </div>
  <div
    className="grid__item one-half text-right"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    <div>
      <Currency
        amount="2.00"
        baseHeadingSize="4"
        className="
            text-dark-tertiary text-right
            soft-half-right@handheld soft-double-right@lap-and-up
          "
      />
    </div>
  </div>
</div>
`;
